<resources>
    <string name="app_name">RecipeOrganizer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_label">Create Your Own</string>
    <string name="recipe_title_hint">What is the recipe name</string>

    <string name="mealtype_label">Meal Type:</string>
    <string-array name="mealtype_array">
        <item>select mealtype</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Dessert</item>
    </string-array>

    <string name="preptime_label">Prep Time:</string>
    <string name="preptime_hint">preptime</string>

    <string name="servingsize_label">Serving Size:</string>
    <string name="servingsize_hint">serving size</string>

    <string name="ingredient_label">Ingredients</string>
    <string name="ingredient_hint">Enter Ingredient</string>

    <string name="step_label">Steps</string>
    <string name="step_hint">Enter Steps</string>

    <string name="submit_button">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>