<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".CreateRecipeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_display"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@color/black"
                    android:cropToPadding="true"
                    android:scaleType="centerInside" />

                <ImageButton
                    android:id="@+id/image_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_camera_alt_24"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:text="@string/title_label"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>

                <EditText
                    android:id="@+id/recipe_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/recipe_title_hint"
                    android:layout_marginLeft="10dp"
                    android:minHeight="48dp" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/mealtype_label"
            android:textAppearance="?attr/textAppearanceHeadline6"/>

        <Spinner
            android:id="@+id/meal_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/preptime_label"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/preptime_info"
            android:hint="@string/preptime_hint"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/serving_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/servingsize_label"
            android:textAppearance="?attr/textAppearanceHeadline6"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/servingsize_info"
            android:hint="@string/servingsize_hint"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ingredient_label"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <ImageButton
                android:id="@+id/add_ingredient_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="add ingredient"
                android:minHeight="48dp"
                android:src="@drawable/baseline_add_box_24"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ingredientsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/step_label"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <ImageButton
                android:id="@+id/add_step_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="add ingredient"
                android:minHeight="48dp"
                android:src="@drawable/baseline_add_box_24"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/stepsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/submit_button"
            android:textAppearance="?attr/textAppearanceHeadline6" />

    </LinearLayout>

</ScrollView>

    <!-- <?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/image_placeholder"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/black"
                android:cropToPadding="true"
                android:scaleType="centerInside"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/image_display"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@color/black"
                android:cropToPadding="true"
                android:scaleType="centerInside"
                android:visibility="visible" />

            <TextView
                android:id="@+id/recipe_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:text="Recipe Title"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/meal_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="27dp"
                android:text="Meal Type: Breakfast"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/prep_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Prep Time: 2 hours"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/serving_size"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Serving Size: "
                android:textSize="15dp" />

            <TextView
                android:id="@+id/ingredients"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Ingredients"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/steps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Steps: "
                android:textSize="15dp" />
        </LinearLayout>

    </LinearLayout> -->